--- a/_config.yml
+++ b/_config.yml
@@ -133,7 +133,7 @@ content:
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
     content:
-      - layout: left
+      - layout: top-right
         title: Yildiz Technical University
         caption: 2012 - 2016  
         sub_title: BSc Electronic and Communication Engineering
