Initial resume setup

--- a/_config.yml
+++ b/_config.yml
@@ -182,7 +182,9 @@ sass:
 plugins:
  - jekyll-seo-tag
  - jemoji
-
+ 
+gems:
+  - jekyll-pdf
 exclude :                 [
   "Gemfile",
   "Gemfile.lock",
