chore: add new certs

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ version: 2
 # Personal info
 name: Atil Eren Sensalduz
 title: Site Reliability Engineer
-email: atil.eren@outlook.com
+email: atil.sensalduz@gmail.com
 phone: (+90)5076101994
 # website: https://github.com/atilsensalduz/
 
